css/main.scss
---
---

@import url("https://use.typekit.net/tvy5vdd.css");
@import url("https://www.w3schools.com/w3css/4/w3.css");

:root {

  --font-main: arsenica-variable, serif !important;

  --color-background: #eee;
  --color-background-nav: #f3eaf5;
  --color-background-footer: #000;
  --color-background-alt: #292929;

  --color-line: #c7a6cf;

  --color-text: #000;
  --color-text-alt: #fff;
}

  /* Removing any borders */
  html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
  }

  body {
    display: flex;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
    margin-top: 60px;
  }

  h1, h2 {
    font-family: arsenica-variable, serif !important;
    font-variation-settings: "wght" 500 !important;
  }

  h3 {
    font-family: arsenica-variable, serif !important;
    font-variation-settings: "wght" 400 !important;
  }

  .row-gap {
    margin-top: 50px;
  }

  .w3-row::after {
    content: "";
    display: table;
    clear: both;
  }

  header {
  display: flex;
  align-items: center;
  padding-top: 5px;
  padding-bottom: 5px;
  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9999;

  background-color: var(--color-background-nav);

  .left {
    flex: 0 0 auto;
    padding-left: 20px;
  }

  .right {
    flex: 1 1 auto;
    text-align: right;
    padding-right: 20px;
  }

  .nav {
    position: relative;

    // neat animations
    &:before,
    &:after {
      position: absolute;
      content: "";
      width: 0;
      height: 1px;
      display: block;
      background-color: var(--color-background-nav);
      transition: width 0.2s;
    }

    &:before {
      left: 0;
    }
    &:after {
      right: 0;
    }

    &:hover:before,
    &:hover:after {
      width: 100%;
      height: 1px;
    }

    a:hover {
      text-decoration: underline;
    }

    &.dropdown:hover .dropdown-content {
      display: block;
      text-align: center;
    }

    .dropdown-content {
      display: none;
      position: absolute;
      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
      margin-top: 1px;
      padding: 0;
      background-color: var(--color-background-nav);
      opacity: 1;
      z-index: 10;
      left: 50%;
      transform: translateX(-50%);

      a {
        display: block;
        padding: 10px;
        text-decoration: none;
        text-align: center;
      }
      a:hover {
        background-color: var(--color-line);
        text-decoration: underline;
      }
    }

    &:last-child {
      .dropdown-content {
        left: auto;
        right: 0;
        transform: translateX(0.5em);
      }
    }
  }

  .logo {
    display: block;
    width: 100px;
    height: 50px;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
  

  .hamburger {
    display: none;
    position: fixed;
    right: 10px;
    z-index: 99999;
    font-size: 2rem;

    a {
      text-decoration: none;
    }
  }
    

  .mobile-menu {
    font-family: var(--font-main);
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    opacity: 0;
    display: flex;
    visibility: hidden;

    padding-top: 100px;

    background-color: var(--color-background-nav);
    z-index: 1000;

    flex-direction: column;
    align-items: flex-end;

    transition: opacity 0.2s;

    &.visible {
      visibility: visible;
      opacity: 1;
    }

    .nav {
      text-align: right;
      font-size: 2em;
      line-height: 1.6em;
      margin-left: 40px;
      margin-right: 20px;

      a {
        &:active,
        &:focus {
          outline: none;
        }
        cursor: pointer;
      }

      &:before {
        display: none;
      }
      &:first-child:before,
      &:after {
        position: relative;
        content: "";
        display: block;
        width: 80vw;
        height: 2px;
        background-color: white;
      }
    }
  }

  & .nav {
    display: inline-block;
    font-size: 1.5em;
    font-family: var(--font-main);
    margin-left: 10px;
    margin-right: 10px;

    a {
      padding: none;
      color: var(--color-text);
      text-decoration: none;
    }

    button {
      color: white;
      background: none;
      padding: 0;
      border: none;
      text-decoration: none;
      font-weight: bold;
    }
  }
}

.pictureOutline {
  border-bottom: var(--color-line) 10px solid;
  max-width:100%;
  height:700px;
  overflow:hidden;
} 

#top {
  position:absolute;
  top:40%; 
  left:50%; 
  transform:translate(-50%, -50%); 
  width:60%;
}


  /* Home */
  /* -------------------------------------------------------------------------------------------------------- */

  #protoPlay {
    height: 300px; 
    width: 100%;
  }

  #protoPlayDiv{
    width: 30%;
  }

  /* Creating the quote slideshow elements */
  .quoteContainer {
    position: relative;
    border-top: #c7a6cf 10px solid;
    background-color: #292929; 
    width: 100%; 
    height: 200px;
    border-bottom: #c7a6cf 10px solid;
  }

  .quoteContainerTitle {
    color: white;
    font-size: 30px;
  }

  /* Adding design and animation to the text */
  .item-1, .item-2, .item-3 {
    color: white;
    position: absolute;
    display: block;
    width: 75%;
    font-style: italic;
    font-size: 20px;
    text-align: center;
    animation-duration: 30s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
  }

  .qImages {
    padding-left:5px; 
    padding-right:5px;
    height: 50px;
  }

  .qLinks {
    color: #ffffff;
  }

  .qLinks:hover {
    color: #c7a6cf;
    text-decoration: underline #c7a6cf;
  }

  /* Specifying the animation */
  .item-1{
    animation-name: anim-1;
  }

  .item-2{
    animation-name: anim-2;
  }

  .item-3{
    animation-name: anim-3;
  }

  @keyframes anim-1 {
    0%, 8.3% { left: -100%; opacity: 0; }
    8.3%,25% { left: 12%; opacity: 1; }
    33.33%, 100% { left: 110%; opacity: 0; }
  }

  @keyframes anim-2 {
    0%, 33.33% { left: -100%; opacity: 0; }
    41.63%, 58.29% { left: 12%; opacity: 1; }
    66.66%, 100% { left: 110%; opacity: 0; }
  }

  @keyframes anim-3 {
    0%, 66.66% { left: -100%; opacity: 0; }
    74.96%, 91.62% { left: 12%; opacity: 1; }
    100% { left: 110%; opacity: 0; }
  }

  /* Add an italic font style to all quotes */
  q {font-style: italic;}

  /* Creating the "Read More" button elements */
  .readMoreButton:hover {
    color:white;
    border-color:black;
    background-color:black;
  }

  .readMoreButton{
    border-color:#c7a6cf;
    padding: 2px;
    color:#c7a6cf; 
    font-size:20px; 
    text-decoration:none;
    border: 3px solid #c7a6cf;
  }

  .eventSquare{
    color: white;
    border-radius: 15px; /* one value */
    background: #292929;
    height: 400px;
    margin: 0 auto;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 10px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
  }

  .eventSquareImage{
    border-radius: 15px; /* one value */
    box-sizing: border-box;
    width: 100%;
    padding: 5px;
    display: block;
  }

  .eventSquareSmall{
    color: white;
    border-radius: 15px; /* one value */
    background: #424242;
    margin: 0 auto;
    padding: 5px;
    overflow: hidden;
  }

  .imageWrap {
    height: 220px;       /* choose what looks right */
    overflow: hidden;
  }

  .imageWrap img {
    width: 100%;
    height: 100%;
    object-fit: contain; /* use cover if cropping is OK */
  }

  /* EVENT SLIDE SHOW*/
  /* Slideshow container */
  .slideshow-container {
    max-width: 1000px;
    position: relative;
    margin: auto;
  }

  /* Hide the images by default */
  .mySlides {
    display: none;
  }

  /* Next & previous buttons */
  #prev, #next {
    cursor: pointer;
    top: 50%;
    width: auto;
    margin-top: -22px;
    color: #c7a6cf;
    font-weight: bold;
    font-size: 25px;
    transition: 0.6s ease;
    user-select: none;
  }

  /* Position the "next button" to the right */
  #next {
    right: 0;
  }



  /* On hover, add a black background color with a little bit see-through */
  #prev:hover, #next:hover {
    background-color: rgba(0,0,0,0.8);
  }

  #dots {
    display: inline-block;
  }

  /* Number text (1/3 etc) */
  .numbertext {
    color: red;
    font-size: 12px;
    top: 0;
  }

  /* The dots/bullets/indicators */
  .dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
  }

  .active, .dot:hover {
    background-color: #717171;
  }

  /* Fading animation */
  .fade {
    animation-name: fade;
    animation-duration: 1.5s;
  }

  @keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
  }



  /* Team */
  /* -------------------------------------------------------------------------------------------------------- */

  .teamImage {
      margin-top: 4px;
      border: 2px solid black;
      width: 300px;
  }

  .teamFollow {
      margin-top: -5px;
      font-size: 17px;
      color: #717171;
      text-decoration: underline;
  }

  .socialLink {
    padding-left:10px; 
    height: 30px;
  }

  .highlight-box {
      background-color: #c7a6cf; /* or any color you like */
      border-radius: 5px;
    margin-bottom: 5px;
    max-width: 300px;        /* responsive max width */
      margin: 0 auto;
  }

  .highlight-box2 {
      background-color: #f3eaf5; /* or any color you like */
      border-radius: 5px;
    margin-bottom: 5px;
    max-width: 300px;        /* responsive max width */
      margin: 0 auto;
  }

  .contactLinks:hover {
    color: #c7a6cf;
    text-decoration: underline #c7a6cf;
  }

  .fourColumnLayout {
    display: grid;
    grid-template-columns: 6% 16% 8% 16% 8% 16% 8% 16% 6%;
  }

  .fourColumnLayout .one {
    grid-column: 2;
  }

  .fourColumnLayout .two {
    grid-column: 4;
  }

  .fourColumnLayout .three {
    grid-column: 6;
  }

  .fourColumnLayout .four {
    grid-column: 8;
  }


  /* Games */
  /* -------------------------------------------------------------------------------------------------------- */
  .twoColumnLayout {
    display: grid;
    grid-template-columns: 13% 35% 2% 2% 35% 13%;
  }

  .twoColumnLayout .left {
    grid-column: 2;
  }

  .twoColumnLayout .right {
    grid-column: 5;
  }

  .videoWrapper {
    width: 100%;
    aspect-ratio: 16 / 9;
  }

  .videoWrapper iframe {
    width: 100%;
    height: 100%;
    border: 0;
  }

  .gamesPicture {
    width: 100%;
    height: auto;
    overflow: hidden;
    border-bottom: var(--color-line) 10px solid;
  }


  /* Footer */
  /* -------------------------------------------------------------------------------------------------------- */

  /* Creating the footer design elements */

  .footerSmall {
    background-color: black;
    height: 400px;
    width: 100%;
    flex-shrink: 0;
    display: block;
  }

  .logoFooter {
    padding-top: 10px;
    max-width: 75%;
    max-height: 75%;
  }

  .socialFooterLarge { 
    height: 50px;
  }

  .socialFooterSmall {
    height: 50px;
  }

  .headingFooter {
    color: #c7a6cf;
    padding-top: 10px;
  }

  #games-background {
    background-color: var(--color-background-alt);
    color: var(--color-text-alt);
  }

  @media (max-width: 600px) {

    header .hamburger {
      display: block;
    }

    header .right {
      display: none;
    }

    .quoteContainer {
      height: 300px;
    }

    .pictureOutline {
      height: 200px;
    }

    #top {
      top: 80px; 
      left: 50%; 
      position: absolute; 
      text-align: center; 
      justify-content: center; 
    }

    #protoPlayDiv {
      width: 100%;
    }

    #protoPlay {
      max-width: 100%;
      height: auto;
    }
  }

